--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DB = mongodb+srv://aditya:aditya@cluster0.pu9pg2n.mongodb.net/Arvyax?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=adityasalkar1806
 
-# CN = ds3wgvlln
-# AK = 713483993168462
-# AS = okp0sDLADvZJc8niZ1BSYz2d3fE
+CN = ds3wgvlln
+AK = 713483993168462
+AS = okp0sDLADvZJc8niZ1BSYz2d3fE
